# pyGitAI

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  devnotes.md  devnotes.txt  pyproject.toml
.github/workflows/: python-package.yml
docs/: modules.rst  pygitai.cli.rst  pygitai.models.rst  pygitai.rst  tests.rst
docs/source/: commands.rst  conf.py  contributing.rst  devnotes.rst  index.rst  installation.rst  pygitai.cli.rst  pygitai.git.rst  pygitai.models.rst  pygitai.rst  quick-start.rst
docs/source/api/: pygitai.cli.rst  pygitai.git.rst  pygitai.models.rst  pygitai.rst
docs/source/commands/: commands.rst  comment.rst  commit.rst  generate-pr.rst
pygitai/: __init__.py  __main__.py  context.py  exceptions.py  hooks.py
pygitai/cli/: __init__.py  commit.py  generate.py  log.py  note.py  setup.py  setup_env.py  usage.py  utils.py
pygitai/cli/commands/: __init__.py  ask.py  comment.py  commit.py  generate.py  log.py  revert.py
pygitai/git/: __init__.py  cache_info.py  issues.py  pull_requests.py  utils.py
pygitai/models/: __init__.py  prompt.py
pygitai/models/google/: __init__.py  api.py  models_dict.py  setup.py
pygitai/models/huggingface/: __init__.py  api_request.py  local_model.py  model_inference.py  models_dict.py  setup.py
pygitai/models/openai/: __init__.py  api.py  models_dict.py  (+1 more)
pygitnotes/: __init__.py  __main__.py  exceptions.py  utils.py
pygitnotes/cli/: __init__.py  commit.py  generate.py  log.py  setup_env.py  utils.py
tests/: cli.py  test.py  test_context.py
tests/scripts/: math.py  setup_test_repo.sh  test_generate.py
