[tool.poetry]
name = "pygitai"
version = "0.1.0"
description = "The git-LLM integration for programming projects"
authors = ["Aryan Gupta <guptaaryan16@gmail.com>"]
readme = "README.md"
license='Apache License, Version 2.0'

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
openai = "^0.28.1"
importlib = "^1.0.4"
gitpython = "^3.1.40"
setuptools = "^69.0.2"
transformers = "^4.36.0"

[tool.poetry.scripts]
pygit = "pygitai.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"